--- a/Ken_porfolio/Ken_porfolio/templates/footer.html
+++ b/Ken_porfolio/Ken_porfolio/templates/footer.html
@@ -1,13 +1,27 @@
-<section>
-    <div class="container text-center">
-        <h2>
-            <a href="/projects">View my open-source projects</a>
-            &bull;
-            <a href="/services">Hire me</a>
-            &bull;
-            <a href="/">About me</a>
-        </h2>
+<html>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+<body>
+<footer class="bg-dark text-center text-white">
+    <!-- Grid container -->
+    <div class="container p-4 pb-0">
+        <!-- Section: Social media -->
+        <section class="mb-4">
+
+            <!-- Github -->
+            <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/Kennetje85" role="button"
+            ><i class="fa fa-github" style="font-size:36px"></i
+            ></a>
+        </section>
+        <!-- Section: Social media -->
     </div>
-</section>
-
-
+    <!-- Grid container -->
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+        © 2021 Copyright:
+        <a class="text-white" href="https://kennetje.pythonanywhere.com/">kennetje.pythonanywhere.com</a>
+    </div>
+    <!-- Copyright -->
+</footer>
