--- a/Ken_porfolio/projects/templates/project_index.html
+++ b/Ken_porfolio/projects/templates/project_index.html
@@ -16,7 +16,12 @@
                 </a>
             </div>
         </div>
+
     </div>
     {% endfor %}
+
 </div>
+
+
+{% include "footer.html" %}
 {% endblock %}
