--- a/Ken_porfolio/projects/templates/project_detail.html
+++ b/Ken_porfolio/projects/templates/project_detail.html
@@ -14,6 +14,7 @@
         <h5>Technology used:</h5>
         <p>{{ project.technology }}</p>
     </div>
+    {% include "footer.html" %}
 </div>
 
 {% endblock %}
